<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top Section -->

        <TextView
            android:id="@+id/date_text"
            android:layout_width="133dp"
            android:layout_height="24dp"
            android:layout_marginEnd="136dp"
            android:fontFamily="@font/dmsans"
            android:text="@string/february_28_2024"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.917"
            app:layout_constraintStart_toEndOf="@+id/home_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.053" />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/track_your_mood"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <ImageView
            android:id="@+id/scan_emoticon"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:contentDescription="Face scan icon"
            android:paddingTop="10dp"
            android:src="@drawable/scan_mood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <!-- ProgressBar to show loading state -->

        <Button
            android:id="@+id/scan_mood_button"
            android:layout_width="204dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/purple_200"
            android:elevation="8dp"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:outlineSpotShadowColor="#FFFF00"
            android:padding="8dp"
            android:stateListAnimator="@null"
            android:text="Scan Your Mood"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scan_emoticon"
            app:layout_constraintVertical_bias="0.037" />

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/profile_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile_icon_description"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/scan_mood_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/imageViewLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:padding="16dp"
                    android:src="@drawable/ic_back" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/black"
                    android:padding="14dp"
                    android:text="@string/content_description"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/imageViewRight"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/content_description"
                    android:padding="16dp"
                    android:src="@drawable/ic_next" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/noDataTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="Tidak ada data untuk tanggal ini"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/dateLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diaryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/dateLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/history_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
